--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 100%;
     margin: 0;
     flex-direction: column;
 }
@@ -23,8 +23,8 @@ h1 {
     border: 1px solid #333;
     border-radius: 8px;
     padding: 16px;
-    width: 1920px;
-    height: 1080px;
+    width: 100%;
+    height: 600px;
     display: flex;
     justify-content: center;
     align-items: center;
