--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    height: 100vh;
     margin: 0;
     flex-direction: column;
 }
@@ -23,8 +23,8 @@ h1 {
     border: 1px solid #333;
     border-radius: 12px;
     padding: 16px;
-    width: 800px;
-    height: 700px;
+    width: 720px;
+    height: 1280px;
     display: flex;
     justify-content: center;
     align-items: center;
